# bd_agent

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LEARN.md  LICENSE  README.md  SECURITY.md  TODOS.md  __main__.py  agent.py  git_how_to.txt  github.txt  kwargs_args.py  main.py  pyproject.toml  requirements.txt  router.py  screener.py  streamlit_app.py  zzz_kwargs_args.py  zzz_phrases_to_learn.py  zzz_temp_mini_agent.py  zzz_to_learn.py
actions/: portfolio.py
agents/: __init__.py
agents/analyze_agent/: __init__.py  analyze_agent.py  name_interpretation_agent.py
analyze_agent/: __init__.py  _scorecard.py  _utils.py  analyze_agent.py  company_tool.py  match_name_ticker.py  name_interpretation_agent.py  resolve_ticker_tool.py  scorecard.py  utils.py  utils_tools.py
bd/: __init__.py  bd_client.py  bd_metadata.py  bd_models.py  bd_provider.py  bd_tools.py  config.py
bd_agent/: __init__.py  __main__.py  cli.py  router.py  settings.py  ui.py
bd_agent/.github/: pull_requests_template.md
bd_agent/.github/workflows/: ci.yml
bd_agent/agents/: __init__.py
bd_agent/bd/: __init__.py  _client.py  _models.py  metadata.py  models.py  repository.py
bd_agent/eval/: __init__.py  intents_eval.py  test.py
bd_agent/intents/: __init__.py  classifier.py
config/: params.yaml
general_investment_advice/: general_investment_advice.py
intents/: classifier.py
notebooks/: notebook.ipynb
screener_agent/: __init__.py  screener_agent.py
src/bd_agent/: __init__.py  __main__.py  router.py  ui.py
src/bd_agent.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
(+48 files in other folders)
