[project]
name = "bd_agent"
version = "1.0.0"
description = "AI-driven stock analysis agent built with OpenAI, Pydantic and Streamlit."
authors = [{ name = "Fredrik Lindblad" }]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
bd_agent = ["eval/reference_sets/*.jsonl"]
